# boxel-3d

./: .gitignore  LICENSE  capacitor.config.ts  changelog.txt  dist-zip.js  extension.js  gulp-build.js  gulp-dist.js  index.html  main.js  main.mjs  manifest-edge.json  manifest-firefox.json  manifest.json  package.json  preload.js  preload.mjs  readme.md  vite.config.js
android/app/: build.gradle
android/keystores/: upload-keystore.jks
css/: stylesheet.css
files/: ui-prototype.xd
files/afdesign/: icon.afdesign  roadmap-2024.afdesign  ui-2.0.afdesign  ui-2.0.afdesign~lock~
files/ai/: angry.ai  au.ai  canada.ai  chrome-artboards.ai  cool.ai  custom.ai  doppler.ai  grimacing.ai  hypnotic.ai  icon.ai  japan.ai  kargoh.ai  kitty.ai  lover.ai  monkey.ai  prism.ai  puppy.ai  sad.ai  sick.ai  skull.ai  smiley.ai  texture-chain.ai  texture-rope.ai  uk.ai  usa.ai
files/blend/: background-blank.blend  background-blue.blend  background-city.blend  boxel-golf.blend  (+21 more)
img/: ui-prototype.xd
js/: account.js  animation.js  app.js  audio.js  chrome.js  collision.js  cube.js  dialog.js  example.js  extension.js  keyboard.js  level-editor.js  level-history.js  level.js  mouse.js  player.js  rope.js  shapes.js  shop.js  skins.js  storage-manager.js  timer.js  ui-controller.js  utility.js
json/: license.json  product.json  skins.json  status.json
levels/: level_1.json
public/: license.txt  manifest.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
v1/: index.html
v2/: index.html
(+456 files in other folders)
