[package]
name = "boxel-3d"
version = "2.8.4"
description = "Boxel 3D desktop app"
authors = ["Jacob DeBenedetto"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["devtools"] }
rfd = "0.15"
webbrowser = "1"
tauri-plugin-window-state = "2"
